--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
 
   <!-- custom CSS-->
-  <link href="static/css/style.css" rel="stylesheet">
-  
+  <link href="static/js/css/style.css" rel="stylesheet">
+
 </head>
 
 <body>
