--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
     <title>Bellybutton Biodiversity</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <!-- Google fonts CSS-->
-    <link href="https://fonts.googleapis.com/css2?family=KoHo:wght@200&display=swap" rel="stylesheet">
-
-    <!-- custom CSS-->
+    <!-- CSS-->
     <link href="static/js/css/style.css" rel="stylesheet">
 
 </head>
